feat(web): create manifest.json and add icons

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -3,7 +3,35 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>edupayroll.software</title>
+
+	<title>edupayroll software</title>
+
+	<link rel="manifest" href="manifest.json">
+
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="application-name" content="edupayroll">
+	<meta name="apple-mobile-web-app-title" content="edupayroll">
+	<meta name="theme-color" content="#4c6ef5">
+	<meta name="msapplication-navbutton-color" content="#4c6ef5">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="msapplication-starturl" content="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<link rel="icon" type="image/png" sizes="128x128" href="icons/icon-128.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="128x128" href="icons/icon-128.png">
+	<link rel="icon" type="image/png" sizes="144x144" href="icons/icon-144.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="144x144" href="icons/icon-144.png">
+	<link rel="icon" type="image/png" sizes="152x152" href="icons/icon-152.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="152x152" href="icons/icon-152.png">
+	<link rel="icon" type="image/png" sizes="180x180" href="icons/icon-180.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="icons/icon-180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="192x192" href="icons/icon-192.png">
+	<link rel="icon" type="image/png" sizes="256x256" href="icons/icon-256.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="256x256" href="icons/icon-256.png">
+	<link rel="icon" type="image/png" sizes="512x512" href="icons/icon-512.png">
+	<link rel="apple-touch-icon" type="image/png" sizes="512x512" href="icons/icon-512.png">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
